<resources>
    <string name="app_name">Rai_Xu</string>
    <string name="homepage_Names_jashan">Jashan Rai (A01185336)</string>
    <string name="homepage_Names_lillian">Lillian Xu (A01233266)</string>
    <string name="button_month_year">Cases by Month and Year</string>
    <string name="button_health_authority">Cases by Health Authority</string>
    <string name="button_gender">Cases by Gender</string>
    <string name="button_age_group">Cases by Age Group</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="button_find">Find</string>
    <string name="login_Email">Email</string>
    <string name="login_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Signup</string>
    <string name="date">Reported_Date: </string>
    <string name="ha">Health Authority: </string>
    <string name="sex">Sex: </string>
    <string name="age">Age Group: </string>
    <string name="classification">Classification_Reported: </string>
    <string name="Less10">Less than 10: </string>
    <string name="tenTo">10 - 19: </string>
    <string name="twentyTo">20 - 29: </string>
    <string name="thirtyTo">30 - 39: </string>
    <string name="fortyTo">40 - 49: </string>
    <string name="fiftyTo">50 - 59: </string>
    <string name="sixtyTo">60 - 69: </string>
    <string name="seventyTo">70 - 79: </string>
    <string name="eightyTo">80 - 89: </string>
    <string name="ninetyTo">90+: </string>
    <string name="waitMessage">Please wait while we fetch the data!</string>
    <string name="logout">Logout</string>


</resources>